--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
 
 
 
